[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/MADE TOMMY Regular_PERSONAL USE.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/scheduling.gd" type="Script" id=2]
[ext_resource path="res://addons/SliderLabel/SliderLabel.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.129412, 0.0666667, 0.890196, 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 1 )

[node name="Scheduling" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = -1.0
margin_right = 1001.0
margin_bottom = 599.0

[node name="NextButton" type="Button" parent="Background"]
margin_left = 600.0
margin_top = 500.0
margin_right = 800.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Next"

[node name="BackButton" type="Button" parent="Background"]
margin_left = 200.0
margin_top = 500.0
margin_right = 400.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Back"

[node name="StudyHoursLabel" type="Label" parent="Background"]
margin_left = 140.0
margin_top = 176.0
margin_right = 360.0
margin_bottom = 221.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Study:"
align = 2

[node name="SchoolHoursSlider" type="HSlider" parent="Background"]
anchor_left = 0.071
anchor_right = 0.071
margin_left = 309.0
margin_top = 192.0
margin_right = 769.0
margin_bottom = 212.0
max_value = 24.0

[node name="SliderLabel" type="Label" parent="Background/SchoolHoursSlider"]
margin_left = -6.0
margin_top = -32.0
margin_right = 18.0
margin_bottom = -5.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 3

[node name="SocializeHoursLabel" type="Label" parent="Background"]
margin_left = 140.0
margin_top = 236.0
margin_right = 360.0
margin_bottom = 281.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Hang around:"
align = 2

[node name="SocializeHoursSlider" type="HSlider" parent="Background"]
anchor_left = 0.071
anchor_right = 0.071
margin_left = 309.0
margin_top = 253.0
margin_right = 769.0
margin_bottom = 273.0
max_value = 24.0

[node name="SliderLabel" type="Label" parent="Background/SocializeHoursSlider"]
margin_left = -6.0
margin_top = -32.0
margin_right = 18.0
margin_bottom = -5.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 3

[node name="EatHoursLabel" type="Label" parent="Background"]
margin_left = 140.0
margin_top = 296.0
margin_right = 360.0
margin_bottom = 341.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Eat:"
align = 2

[node name="EatHoursSlider" type="HSlider" parent="Background"]
anchor_left = 0.071
anchor_right = 0.071
margin_left = 309.0
margin_top = 311.0
margin_right = 769.0
margin_bottom = 331.0
max_value = 24.0

[node name="SliderLabel" type="Label" parent="Background/EatHoursSlider"]
margin_left = -6.0
margin_top = -32.0
margin_right = 18.0
margin_bottom = -5.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 3

[node name="SleepHoursLabel" type="Label" parent="Background"]
margin_left = 140.0
margin_top = 358.0
margin_right = 360.0
margin_bottom = 403.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Sleep:"
align = 2

[node name="SleepHoursSlider" type="HSlider" parent="Background"]
anchor_left = 0.071
anchor_right = 0.071
margin_left = 309.0
margin_top = 373.0
margin_right = 769.0
margin_bottom = 393.0
max_value = 24.0

[node name="SliderLabel" type="Label" parent="Background/SleepHoursSlider"]
margin_left = -6.0
margin_top = -32.0
margin_right = 18.0
margin_bottom = -5.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 3

[node name="YoutubeHoursLabel" type="Label" parent="Background"]
margin_left = 140.0
margin_top = 422.0
margin_right = 360.0
margin_bottom = 467.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "YouTube:"
align = 2

[node name="YoutubeHoursSlider" type="HSlider" parent="Background"]
anchor_left = 0.071
anchor_right = 0.071
margin_left = 309.0
margin_top = 437.0
margin_right = 769.0
margin_bottom = 457.0
max_value = 24.0

[node name="SliderLabel" type="Label" parent="Background/YoutubeHoursSlider"]
margin_left = -6.0
margin_top = -32.0
margin_right = 18.0
margin_bottom = -5.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 3

[node name="RemainingHoursLabel" type="Label" parent="Background"]
margin_left = 149.0
margin_top = 112.0
margin_right = 846.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0.129412, 0.0666667, 0.890196, 1 )
custom_fonts/font = SubResource( 7 )
text = "You still have 24 hours left."
align = 1

[connection signal="button_down" from="Background/NextButton" to="." method="_on_NextButton_button_down"]
[connection signal="button_down" from="Background/BackButton" to="." method="_on_BackButton_button_down"]
[connection signal="drag_ended" from="Background/SchoolHoursSlider" to="." method="_on_SchoolHoursSlider_drag_ended"]
[connection signal="drag_ended" from="Background/SocializeHoursSlider" to="." method="_on_SocializeHoursSlider_drag_ended"]
[connection signal="drag_ended" from="Background/EatHoursSlider" to="." method="_on_EatHoursSlider_drag_ended"]
[connection signal="drag_ended" from="Background/SleepHoursSlider" to="." method="_on_SleepHoursSlider_drag_ended"]
[connection signal="drag_ended" from="Background/YoutubeHoursSlider" to="." method="_on_YoutubeHoursSlider_drag_ended"]
